--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -175,16 +175,16 @@ label {
   background: var(--dark-1);
   border-radius: 0.5rem;
   cursor: pointer;
-  height: 1rem;
+  height: 1.1rem;
   position: relative;
   left: 80%;
-  width: 1.8rem;
+  width: 2.25rem;
 }
 
 label .sun-moon {
   background: var(--light-1);
   border-radius: 50%;
-  height: 0.75rem;
+  height: 0.85rem;
   margin: 0.15rem;
   transition: transform 0.3s ease;
   width: 0.75rem;
@@ -192,7 +192,7 @@ label .sun-moon {
 
 #toggle-button:checked + label .sun-moon {
   background-color: var(--dark-1);
-  transform: translateX(0.75em);
+  transform: translateX(1.25rem);
 }
 
 section {
